# OpenMedMCQA

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  Master1.md  README.md  SECURITY.md  TESTING.md  compose.yaml  datasette_metadata.json  hatch.toml  main.txt  main2.txt  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml
scripts/: convert_json_to_jsonl.py  prefetch_datasets.py  prefetch_models.py  sample_questions.json  sample_questions.jsonl
src/medagent/: agent.py  agents.py  api.py  assistants_agent.py  cli.py  config.py  datasets.py  datasette_integration.py  db.py  embeddings.py  evaluation.py  llm_integration.py  logging_utils.py  metrics.py  models.py  prompts.py  rag.py  rate_limit.py  retrieval.py
tests/: conftest.py  test_agent_parsing.py  test_api.py  test_api_auth.py  test_cli_menu.py  test_embeddings.py  test_export_and_batch.py  test_index_dedup.py  test_info_stats_and_quota.py  test_models_and_logging.py  test_rate_limit.py  test_rate_limit_headers.py  test_report_and_dashboard.py  test_smoke.py
